; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_mpcore_timer.c_attach_tc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_mpcore_timer.c_attach_tc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.arm_tmr_softc*, i32 }
%struct.arm_tmr_softc = type { i32, i32, i32, i32* }

@arm_tmr_tc = common dso_local global %struct.TYPE_4__* null, align 8
@EBUSY = common dso_local global i32 0, align 4
@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@RF_ACTIVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"could not allocate gbl mem resources\0A\00", align 1
@ENXIO = common dso_local global i32 0, align 4
@GBL_TIMER_CTRL = common dso_local global i32 0, align 4
@arm_tmr_timecount = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GBL_TIMER_CTRL_TIMER_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arm_tmr_softc*)* @attach_tc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @attach_tc(%struct.arm_tmr_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.arm_tmr_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.arm_tmr_softc* %0, %struct.arm_tmr_softc** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @arm_tmr_tc, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @EBUSY, align 4
  store i32 %8, i32* %2, align 4
  br label %44

9:                                                ; preds = %1
  %10 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %11 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  store i32 %12, i32* %4, align 4
  %13 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %14 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @SYS_RES_MEMORY, align 4
  %17 = load i32, i32* @RF_ACTIVE, align 4
  %18 = call i32* @bus_alloc_resource_any(i32 %15, i32 %16, i32* %4, i32 %17)
  %19 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %20 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %19, i32 0, i32 3
  store i32* %18, i32** %20, align 8
  %21 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %22 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %21, i32 0, i32 3
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %9
  %26 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %27 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @device_printf(i32 %28, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %30 = load i32, i32* @ENXIO, align 4
  store i32 %30, i32* %2, align 4
  br label %44

31:                                               ; preds = %9
  %32 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %33 = load i32, i32* @GBL_TIMER_CTRL, align 4
  %34 = call i32 @tmr_gbl_write_4(%struct.arm_tmr_softc* %32, i32 %33, i32 0)
  %35 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %36 = getelementptr inbounds %struct.arm_tmr_softc, %struct.arm_tmr_softc* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  store i32 %37, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @arm_tmr_timecount, i32 0, i32 1), align 8
  %38 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  store %struct.arm_tmr_softc* %38, %struct.arm_tmr_softc** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @arm_tmr_timecount, i32 0, i32 0), align 8
  %39 = call i32 @tc_init(%struct.TYPE_4__* @arm_tmr_timecount)
  store %struct.TYPE_4__* @arm_tmr_timecount, %struct.TYPE_4__** @arm_tmr_tc, align 8
  %40 = load %struct.arm_tmr_softc*, %struct.arm_tmr_softc** %3, align 8
  %41 = load i32, i32* @GBL_TIMER_CTRL, align 4
  %42 = load i32, i32* @GBL_TIMER_CTRL_TIMER_ENABLE, align 4
  %43 = call i32 @tmr_gbl_write_4(%struct.arm_tmr_softc* %40, i32 %41, i32 %42)
  store i32 0, i32* %2, align 4
  br label %44

44:                                               ; preds = %31, %25, %7
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i32* @bus_alloc_resource_any(i32, i32, i32*, i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1

declare dso_local i32 @tmr_gbl_write_4(%struct.arm_tmr_softc*, i32, i32) #1

declare dso_local i32 @tc_init(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
